# twttr

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/admin/: base.py
app/api/: auth.py  health.py  tweets.py  users.py
app/core/: config.py  extensions.py  security.py
app/models/: __init__.py  token_blocklist.py  tweet.py  user.py
app/schemas/: tweet.py  user.py
app/services/: token.py  tweet.py  user.py
app/templates/: index.html  login.html  register.html
app/utils/: admin_views.py  login.py
app/views/: routes.py
backend/: .env.example  docker-compose-prod.yml  docker-compose.yml  manage.py  requirements.txt
backend/app/: __init__.py
backend/app/admin/: base.py  tweet.py  user.py
backend/app/api/: auth.py  health.py  leaderboard.py  tweets.py  users.py
backend/app/core/: extensions.py
backend/app/models/: __init__.py  like.py  tweet.py  tweet_count.py  user.py
backend/app/schemas/: like.py  tweet.py  tweet_count.py  user.py
backend/app/services/: like.py  tweet.py  tweet_count.py
backend/app/tasks/: tweet.py
backend/app/utils/: file.py  response.py  schedulers.py
backend/app/validators/: auth.py  tweet.py  user.py
backend/app/views/: routes.py
backend/tests/: conftest.py  test_tweets.py  test_users.py
frontend/: .env.example  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
tests/: conftest.py  test_auth.py  test_helth.py  test_users.py
(+28 files in other folders)
